# LocalRAG

./: README.md  add_to_db.py  benchmark.py  embed.py  infer.py  ingest.py  inspect_db.py  pyproject.toml  search_db.py  text.txt
extraction/: __init__.py  ner.py  pipeline.py
fact_store/: facts.db
qdrant_data/: meta.json
qdrant_data/collection/documents/: storage.sqlite
qdrant_data/collection/test_docs/: storage.sqlite
structure/: __init__.py  document_tree.py  entity_schema.py  fact_store.py  parser.py  table_parser.py
