[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "faiss-cpu>=1.13.2",
    "llama-cpp-python>=0.3.16",
    "qdrant-client>=1.12.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "tesseract>=0.1.3",
    "unstructured[all-docs]>=0.18.27",
]
